--- a/estiloSs.css
+++ b/estiloSs.css
@@ -9,7 +9,7 @@
     text-align: center;
     z-index: 1;
     font-weight: lighter;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .nebulosa {
@@ -37,4 +37,5 @@
 
 .separartexto {
     padding: 5px;
+
 }
