--- a/EstiloAc.css
+++ b/EstiloAc.css
@@ -7,22 +7,22 @@
 .Información {
     position: relative;
     text-align: center;
-    z-index: 1;
     font-weight: lighter;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
 }
 
 #apx {    
     background-color: blue;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    height: 5px;
 }
 
 #apy {
     background-color:red;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     margin-top: 50px;
+    width: 5px;
 }
 
 .Purebacir{
@@ -31,23 +31,20 @@
 }
 
 #circulo_x_y_z{
-    position: absolute;
-    z-index: 0;
+    position: relative;
     border-radius: 50%;
     outline: solid;
-    margin-left: 700px;
-    margin-right: auto;    
+    margin: auto;  
 }
 
 #hgirar {
     position: relative;
-    z-index: 1;
     background-color:blueviolet;
     height: 5px;
     width: 100px;
-    margin: auto auto;
+    margin: auto ;
     margin-bottom: 60px;
-    margin-top: -20px;
+    margin-top: -70px;
     animation: girar 37s linear infinite; /*debido a que 4 secciones (aproximadamente)*/
 }
 
@@ -65,11 +62,9 @@
 }
 
 .dibujo {
-    z-index: 1;
     width: 80px;
     height: 155px;
-    margin-left: 775px;
-    margin-right: auto;
+    margin: auto;
     border-radius: 50%;
     margin-top: -180px;
     outline: dashed;
@@ -77,32 +72,26 @@
 }
 
 .dibujo2 {
-    z-index: 1;
-    width: 161px;
+     width: 161px;
     height: 50px;
-    margin-left: 735px;
-    margin-right: auto;
+    margin: auto;
     border-radius: 50%;
     margin-top: -100px;
     outline: dashed;
-    outline-color:rgb(0, 98, 255);
-    
+    outline-color:rgb(0, 98, 255);       
 }
 
 .circulo_z{
     display: inline-block;
-    z-index: 0;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     outline: solid;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
 
 .eclipse2 {
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     margin-top: -80px;
     width: 100px;
     height: 50px;
@@ -131,6 +120,7 @@
     padding: 5px;
 
 }
+
 
 
 
